# map-reduce

./: .gitignore  CMakeLists.txt  README.md
docs/: report.md
src/: CMakeLists.txt  FileHelper.cpp  FileHelper.h  MapReduce.cpp  MapReduce.h  main.cpp
test/: CMakeLists.txt  MapReduceTest.cpp
test/files1/: test.txt
test/files2/: test1.txt
